--- a/my-app/index.html
+++ b/my-app/index.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&family=League+Spartan:wght@100..900&family=Manrope:wght@200..800&display=swap" rel="stylesheet">
     <link href="/src/styles.css" rel="stylesheet">
     <meta charset="UTF-8"  name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gabe Godoi's Website</title>
+    <title>Games Godoi</title>
   </head>
   <body>
     <div id="root"></div>
