changed the style to add dark-mode, light-mode, party-mode

--- a/my-app/index.html
+++ b/my-app/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <link rel="icon" href="./src/assets/gabelogo.svg" type="image/x-icon" />
+    <link rel="icon" href="./src/assets/gabelogoPINK.svg" type="image/x-icon" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&family=League+Spartan:wght@100..900&family=Manrope:wght@200..800&display=swap" rel="stylesheet">
