--- a/my-app/index.html
+++ b/my-app/index.html
@@ -7,6 +7,11 @@
     <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&family=League+Spartan:wght@100..900&family=Manrope:wght@200..800&display=swap" rel="stylesheet">
     <link href="/src/styles.css" rel="stylesheet">
     <meta charset="UTF-8"  name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:title" content="Game Godoi" />
+    <meta property="og:description" content="Game design by Gabe Godoi." />
+    <meta property="og:image" content="https://www.gamegodoi.com/gabelogoPINK.png" />
+    <meta property="og:url" content="https://gamegodoi.com/" />
+    <meta property="og:type" content="website" />
     <title>Game Godoi</title>
   </head>
   <body>
