--- a/my-app/index.html
+++ b/my-app/index.html
@@ -9,7 +9,7 @@
     <meta charset="UTF-8"  name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:title" content="Game Godoi" />
     <meta property="og:description" content="Game design by Gabe Godoi." />
-    <meta property="og:image" content="https://gamegodoi.com/gabelogoPINK.svg" />
+    <meta property="og:image" content="https://gamegodoi.com/pink-dice.png" />
     <meta property="og:url" content="https://gamegodoi.com/" />
     <meta property="og:type" content="website" />
     <title>Game Godoi</title>
